<resources>
    <string name="app_name">MyCinema</string>
    <string name="action_load_popular_movies">Popular Movies</string>
    <string name="action_load_top_rated_movies">Top Rated Movies</string>
    <string name="action_load_saved_movies">Saved Movies</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="movies_are_being_loaded">Movies are being loaded</string>
    <string name="shows_the_movie_backdrop">Shows the Movie backdrop</string>
    <string name="save_as_favorite">Save as favorite</string>
    <string name="remove_from_favorites">Remove from favorites</string>
</resources>