<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MovieListFragment">

    <fragment
        android:id="@+id/MovieListFragment"
        android:name="com.example.mycinema.MovieListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_movie_list">

        <action
            android:id="@+id/action_MovieListFragment_to_MovieDetailFragment"
            app:destination="@id/MovieDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/MovieDetailFragment"
        android:name="com.example.mycinema.MovieDetailFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_movie_detail">

        <action
            android:id="@+id/action_MovieDetailFragment_to_MovieListFragment"
            app:destination="@id/MovieListFragment" />
        <argument
            android:name="movie"
            app:argType="com.example.mycinema.model.Movie" />
        <action
            android:id="@+id/action_MovieDetailFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"/>
    </fragment>
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.mycinema.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_movie_detail">
        <action
            android:id="@+id/action_ThirdFragment_to_MovieDetailFragment"
            app:destination="@id/MovieDetailFragment" />
        <argument
            android:name="movie"
            app:argType="com.example.mycinema.model.Movie" />
        <action
            android:id="@+id/action_ThirdFragment_to_MovieListFragment"
            app:destination="@id/MovieListFragment"/>
    </fragment>
</navigation>